<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideWest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalInput"
        app:layout_constraintEnd_toStartOf="@+id/totalInput"
        app:layout_constraintStart_toStartOf="@+id/guideWest" />

    <EditText
        android:id="@+id/totalInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/guideEast"
        app:layout_constraintStart_toEndOf="@id/totalLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/percentInput"
        app:layout_constraintEnd_toStartOf="@+id/percentInput"
        app:layout_constraintStart_toStartOf="@+id/guideWest" />

    <EditText
        android:id="@+id/percentInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/guideEast"
        app:layout_constraintStart_toEndOf="@id/percentLabel"
        app:layout_constraintTop_toBottomOf="@+id/totalInput" />

    <TextView
        android:id="@+id/numPeopleLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number_of_people"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/numPeopleInput"
        app:layout_constraintEnd_toStartOf="@+id/numPeopleInput"
        app:layout_constraintStart_toStartOf="@+id/guideWest" />

    <EditText
        android:id="@+id/numPeopleInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@id/numPeopleLabel"
        app:layout_constraintEnd_toStartOf="@+id/guideEast"
        app:layout_constraintTop_toBottomOf="@+id/percentInput" />

    <Button
        android:id="@+id/calcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toStartOf="@+id/guideEast"
        app:layout_constraintStart_toStartOf="@+id/guideWest"
        app:layout_constraintTop_toBottomOf="@+id/numPeopleInput" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideEast"
        app:layout_constraintStart_toStartOf="@+id/guideWest"
        app:layout_constraintTop_toBottomOf="@+id/calcButton" />
</androidx.constraintlayout.widget.ConstraintLayout>